--- a/public/index.html
+++ b/public/index.html
@@ -5,130 +5,133 @@
 
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 
-    <!--Bootstrap-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <!-- Bootstrap Core CSS -->
+    <link href="styles/bootstrap.min.css" rel="stylesheet">
     <!--<link rel="stylesheet" href="/styles/bootstrap.min.css">-->
     <link rel="stylesheet" href="/styles/styles.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
     <script src="//code.jquery.com/jquery-latest.min.js"></script>
     <script src="//unslider.com/unslider.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js"></script>
+
+    <!--Bootstrap Directives-->
+    <script src="js/ui-bootstrap-tpls-0.11.2.min.js"></script>
+
     <script src="/scripts/directives/directives.js"></script>
     <script src="scripts/services/shoppingCart.js"></script>
     <script src="scripts/services/services.js"></script>
     <script src="/scripts/controllers/controllers.js"></script>
     <script src="scripts/global.js"></script>
 </head>
-<body class="row">
-    <div class="main-container col-md-offset-1 col-xs-12 col-md-10">
-        <div class="top-bar">
-            <!--<div id="top-bar-right">
-                <ul id="top_social">
-                    <li class="social_facebook">
-                        <a href="#" tooltip="facebook"><span>facebook</span></a>
-                    </li>
-                    <li class="social_twitter">
-                        <a href="#" tooltip="twitter"><span>twitter</span></a>
-                    </li>
-                    <li class="social_linkedin">
-                        <a href="#" tooltip="linkedin"><span>linkedin</span></a>
-                    </li>
-                    <li class="social_rss">
-                        <a href="#" tooltip="linkedin"><span>linkedin</span></a>
-                    </li>
-                </ul>
-            </div>-->
-            <div class="pull-left">
-                <span class="glyphicon glyphicon-earphone"></span> <span>2123 12 32</span>
-            </div>
-            <div class="pull-right" ng-controller="WelcomeController">
-                <div ng-show="user"><span>{{user.name}}</span>,<a href="#" ng-click="logout()">salir</a></div>
-                <div ng-hide="user"><a href="/#/login">ingresar</a></div>
-            </div>
-        </div>
-        <div class="row header">
-            <div class="col-xs-12 col-md-6">
-                <img src="images/site/logo.png" />
-            </div>
-            <div class="col-md-6">
-                <!--<div class="banner">
-                    <ul>
-                        <li>
-                            <img src="http://dummyimage.com/450x300/AAA/FFF.png&text=Slider+1" />
+<body>
+     <div class="main-container col-md-offset-1 col-xs-12 col-md-10">
+            <div class="top-bar">
+                <!--<div id="top-bar-right">
+                    <ul id="top_social">
+                        <li class="social_facebook">
+                            <a href="#" tooltip="facebook"><span>facebook</span></a>
                         </li>
-                        <li>
-                            <img src="http://dummyimage.com/450x300/AAA/FFF.png&text=Slider+2" />
+                        <li class="social_twitter">
+                            <a href="#" tooltip="twitter"><span>twitter</span></a>
                         </li>
-                        <li>
-                            <img src="http://dummyimage.com/450x300/AAA/FFF.png&text=Slider+3" />
+                        <li class="social_linkedin">
+                            <a href="#" tooltip="linkedin"><span>linkedin</span></a>
                         </li>
-                        <li>
-                            <img src="http://dummyimage.com/450x300/AAA/FFF.png&text=Slider+4" />
+                        <li class="social_rss">
+                            <a href="#" tooltip="linkedin"><span>linkedin</span></a>
                         </li>
                     </ul>
                 </div>-->
+                <div class="pull-left">
+                    <span class="glyphicon glyphicon-earphone"></span> <span>2123 12 32</span>
+                </div>
+                <div class="pull-right" ng-controller="WelcomeController">
+                    <div ng-show="user"><span>{{user.name}}</span>,<a href="#" ng-click="logout()">salir</a></div>
+                    <div ng-hide="user"><a href="/#/login">ingresar</a></div>
+                </div>
             </div>
-        </div>
-        <div class="content">
-            <nav class="navbar navbar-default" role="navigation">
-                <div class="container-fluid">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <!--<a class="navbar-brand" href="#">GPH</a>-->
-                    </div>
-
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ng-controller="MenuController">
-                        <ul class="nav navbar-nav navbar-left">
-                            <li ng-class="{ active : isActive('/')}"><a href="#/">Inicio</a></li>
-                            <li class="dropdown">
-                                <a href="" class="dropdown-toggle" data-toggle="dropdown">Productos <span class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#/filtro/verduras">Verduras</a></li>
-                                    <li><a href="#/filtro/frutas">Frutas</a></li>
-                                    <li><a href="#/filtro/plantas">Plantas y Flores</a></li>
-                                    <li><a href="#">Combos</a></li>
-                                </ul>
-                            </li>
-                            <li ng-class="{ active : isActive('/contacto')}"><a href="#/contacto">Contacto</a></li>
-                            <li ng-class="{ active : isActive('/como-comprar')}"><a href="#/como-comprar">Cómo comprar?</a></li>
-                            <li ng-class="{ active : isActive('/registro')}"><a href="#/registro">Registrarse</a></li>
-                            <li class="pull-right">
-                               
-                            </li>
-                        </ul>
-                        <ul class="nav navbar-nav navbar-right">
+            <div class="row header">
+                <div class="col-xs-12 col-md-6">
+                    <img src="images/site/logo.png" />
+                </div>
+                <div class="col-md-6">
+                    <!--<div class="banner">
+                        <ul>
                             <li>
-                                <div class="menu-cart" ng-controller="CartController">
-                                    <a class="mycart" href="#/carrito">Mi Carrito : <span class="simpleCart_quantity">{{cart.getTotalCount()}}</span> item(s)</a>
-                                    Precio Total: <span class="simpleCart_total">{{cart.getTotalPrice() | currency}}</span>
-                                </div>
+                                <img src="http://dummyimage.com/450x300/AAA/FFF.png&text=Slider+1" />
+                            </li>
+                            <li>
+                                <img src="http://dummyimage.com/450x300/AAA/FFF.png&text=Slider+2" />
+                            </li>
+                            <li>
+                                <img src="http://dummyimage.com/450x300/AAA/FFF.png&text=Slider+3" />
+                            </li>
+                            <li>
+                                <img src="http://dummyimage.com/450x300/AAA/FFF.png&text=Slider+4" />
                             </li>
                         </ul>
-                    </div><!-- /.navbar-collapse -->
-                        
-                </div><!-- /.container-fluid -->
-            </nav>
+                    </div>-->
+                </div>
+            </div>
+            <div class="content">
+                <nav class="navbar navbar-default" role="navigation">
+                    <div class="container-fluid">
+                        <!-- Brand and toggle get grouped for better mobile display -->
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <!--<a class="navbar-brand" href="#">GPH</a>-->
+                        </div>
 
-            <div ng-view></div>
-        </div>
-        <div class="bottom-bar">
-            <div class="pull-left">
-                © 2014 gph-plantas.com
+                        <!-- Collect the nav links, forms, and other content for toggling -->
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ng-controller="MenuController">
+                            <ul class="nav navbar-nav navbar-left">
+                                <li ng-class="{ active : isActive('/')}"><a href="#/">Inicio</a></li>
+                                <li class="dropdown">
+                                    <a href="" class="dropdown-toggle" data-toggle="dropdown">Productos <span class="caret"></span></a>
+                                    <ul class="dropdown-menu" role="menu">
+                                        <li><a href="#/filtro/verduras">Verduras</a></li>
+                                        <li><a href="#/filtro/frutas">Frutas</a></li>
+                                        <li><a href="#/filtro/plantas">Plantas y Flores</a></li>
+                                        <li><a href="#">Combos</a></li>
+                                    </ul>
+                                </li>
+                                <li ng-class="{ active : isActive('/contacto')}"><a href="#/contacto">Contacto</a></li>
+                                <li ng-class="{ active : isActive('/como-comprar')}"><a href="#/como-comprar">Cómo comprar?</a></li>
+                                <li ng-class="{ active : isActive('/registro')}"><a href="#/registro">Registrarse</a></li>
+                                <li class="pull-right">
+
+                                </li>
+                            </ul>
+                            <ul class="nav navbar-nav navbar-right">
+                                <li>
+                                    <div class="menu-cart" ng-controller="CartController">
+                                        <a class="mycart" href="#/carrito">Mi Carrito : <span class="simpleCart_quantity">{{cart.getTotalCount()}}</span> item(s)</a>
+                                        Precio Total: <span class="simpleCart_total">{{cart.getTotalPrice() | currency}}</span>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div><!-- /.navbar-collapse -->
+
+                    </div><!-- /.container-fluid -->
+                </nav>
+
+                <div ng-view></div>
             </div>
-            <div class="pull-right">
-                powered by <a href="mailto:ovsleep@gmail.com">ovsleep</a>
+            <div class="bottom-bar">
+                <div class="pull-left">
+                    © 2014 gph-plantas.com
+                </div>
+                <div class="pull-right">
+                    powered by <a href="mailto:ovsleep@gmail.com">ovsleep</a>
+                </div>
             </div>
         </div>
-    </div>
 </body>
 </html>
