--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/styles/styles.css">
 
     <script src="//code.jquery.com/jquery-latest.min.js"></script>
-    <script src="//unslider.com/unslider.min.js"></script>
+    <!--<script src="//unslider.com/unslider.min.js"></script>-->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js"></script>
@@ -23,7 +23,7 @@
     <script src="scripts/services/shoppingCart.js"></script>
     <script src="scripts/services/services.js"></script>
     <script src="/scripts/controllers/controllers.js"></script>
-    <script src="scripts/global.js"></script>
+    <!--<script src="scripts/global.js"></script>-->
 </head>
 <body>
      <div class="main-container col-md-offset-1 col-xs-12 col-md-10">
