Subí tres fotos de logo principal. Coloque una y cambié el teléfono

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
                     </ul>
                 </div>-->
                 <div class="pull-left">
-                    <span class="glyphicon glyphicon-earphone"></span> <span>2123 12 32</span>
+                    <span class="glyphicon glyphicon-earphone"></span> <span>099989891</span>
                 </div>
                 <div class="pull-right" ng-controller="WelcomeController">
                     <div ng-show="user"><span>{{user.name}}</span>,<a href="#" ng-click="logout()">salir</a></div>
@@ -54,7 +54,7 @@
             </div>
             <div class="row header">
                 <div class="col-xs-12 col-md-6">
-                    <img src="images/site/logo.png" />
+                    <img src="images/site/TituloPuestoencasa1.png" />
                 </div>
                 <div class="col-md-6">
                     <!--<div class="banner">
