Poder ver la lista de  mis clientes y sus datos en backend (Incluida contraseña)

--- a/public/backend/index.html
+++ b/public/backend/index.html
@@ -42,6 +42,7 @@
     <script src="scripts/controllers/ProductsUploaderController.js"></script>
     <script src="scripts/controllers/WelcomeController.js"></script>
     <script src="scripts/controllers/OrdersController.js"></script>
+    <script src="scripts/controllers/UsersController.js"></script>
 </head>
 <body class="row">
     <div id="wrapper">
@@ -96,6 +97,9 @@
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
+                        </li>
+                        <li>
+                            <a href="#/usuarios"><i class="fa fa-user fa-fw"></i> Usuarios<span class="fa arrow"></span></a>
                         </li>
                     </ul>
                 </div>
