--- a/public/index.html
+++ b/public/index.html
@@ -110,6 +110,7 @@
                             </li>
                             <li ng-class="{ active : isActive('/contacto')}"><a href="#/contacto">Contacto</a></li>
                             <li ng-class="{ active : isActive('/como-comprar')}"><a href="#/como-comprar">Cómo comprar?</a></li>
+                            <li ng-class="{ active : isActive('/repetir-pedido')}"><a href="#/repetir-pedido">Repetir Pedido</a></li>
                             <!--<li ng-class="{ active : isActive('/registro')}"><a href="#/registro">Registrarse</a></li>-->
                             <li class="pull-right">
 
