--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 ﻿<!DOCTYPE html>
 <html ng-app="GPHPlantas">
 <head>
-    <title>GPH Plantas</title>
+    <meta name="description" content="Toda la fruta y verdura que necesitas. Envio a domicilio para particulares y empresas.">
+    <meta name="keywords" content="frutas, verduras, uruguay, pedidos, pedido, puesto, dieta, puesto en casa," />
+    <title>Puesto en casa</title>
 
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 
