--- a/public/index.html
+++ b/public/index.html
@@ -142,6 +142,7 @@
                                 <li ng-class="{ active : isActive('/contacto')}"><a href="#/contacto">Contacto</a></li>
                                 <li ng-class="{ active : isActive('/como-comprar')}"><a href="#/como-comprar">Cómo comprar?</a></li>
                                 <li ng-class="{ active : isActive('/repetir-pedido')}"><a href="#/repetir-pedido">Repetir Pedido</a></li>
+                                <!--<li ng-class="{ active : isActive('/empresas')}"><a href="#/empresas">Empresas</a></li>-->
                                 <!--<li ng-class="{ active : isActive('/registro')}"><a href="#/registro">Registrarse</a></li>-->
                                 <li class="pull-right">
 
@@ -163,7 +164,7 @@
         </div>
         <div class="bottom-bar">
             <div class="pull-left">
-                © 2014 gph-plantas.com
+                © 2015 www.puestoencasa.com.uy
             </div>
             <div class="pull-right">
                 powered by <a href="mailto:ovsleep@gmail.com">ovsleep</a>
