corrijo basuritas en index

--- a/public/index.html
+++ b/public/index.html
@@ -156,7 +156,7 @@
 
                 <!--Descomentar esto-->
                 <!--*********************************************-->
-                --<cart class="menu-cart pull-right" ng-controller="CartController">
+                <cart class="menu-cart pull-right" ng-controller="CartController">
                     <a class="mycart" href="#/carrito">Mi Carrito : <span class="simpleCart_quantity">{{cart.getTotalCount()}}</span> item(s)</a>
                     Precio Total: <span class="simpleCart_total">{{cart.getTotalPrice() | currency}}</span>
                 </cart>-->
@@ -167,14 +167,14 @@
 
             <!--Descomentar esto-->
             <!--*********************************************-->
-            <div ng-view></div>-->
+            <div ng-view></div>
             <!--*********************************************-->
 
             <!--Comentar esto-->
             <!--*********************************************-->
            <!-- <div class="text-center">
                 <img src="../images/offline.png" class="img-responsive" style="margin: 0 auto;" />
-            </div>
+            </div> 
             <!--*********************************************-->
         </div>
         <div class="bottom-bar">
