--- a/public/index.html
+++ b/public/index.html
@@ -159,7 +159,7 @@
                 <cart class="menu-cart pull-right" ng-controller="CartController">
                     <a class="mycart" href="#/carrito">Mi Carrito : <span class="simpleCart_quantity">{{cart.getTotalCount()}}</span> item(s)</a>
                     Precio Total: <span class="simpleCart_total">{{cart.getTotalPrice() | currency}}</span>
-                </cart>-->
+                </cart>
                 <!--*********************************************-->
 
             </div>
